Correct Issue with Repo Images not fitting the page on mobile

--- a/3dp/css/style.css
+++ b/3dp/css/style.css
@@ -49,7 +49,7 @@
 
 
 	.repoimg {
-		max-width: 400px;
+		max-width: 600px;
 		height: auto;
 
 	}
